# forth-rusted

./: Cargo.toml
forth/: Cargo.toml
forth/src/: main.rs
lib_interpreter/: Cargo.toml
lib_interpreter/src/: lib.rs
src/: interpreter.rs  main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
