[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
lib_interpreter = { path = "../lib_interpreter" }
js-sys = "0.3.76"
wasm-bindgen = "0.2.99"

[dependencies.web-sys]
version = "0.3.76"
features = [
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"ImageData",
	"KeyboardEvent",
	"Window",
]

[lib]
crate-type = ["cdylib"]
